UART_GPS_Serial.cydsn/REBUILD.log
--------------- Rebuild Started: 03/24/2023 17:08:43 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'NEO_GPS_Location':
main.c:297:20: error: incompatible type for argument 1 of 'UART_PutString'
     UART_PutString(GpsData->latitude);
                    ^
In file included from Generated_Source\PSoC5/project.h:22:0,
                 from main.c:12:
Generated_Source\PSoC5/UART.h:139:10: note: expected 'const char8 * {aka const char *}' but argument is of type 'double'
     void UART_PutString(const char8 string[]) ;
          ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 03/24/2023 17:08:43 ---------------
